@@ -6,8 +6,10 @@ cp /media/Kindle/SotongDJ/finance.py ~/github/launchpad-kindle/finance.py
 cp /media/Kindle/SotongDJ/filter.py ~/github/launchpad-kindle/filter.py
 cp /media/Kindle/SotongDJ/file.sh ~/github/launchpad-kindle/file.sh
 cp /media/Kindle/SotongDJ/fm.py ~/github/launchpad-kindle/fm.py
-cp /media/Kindle/SotongDJ/record.sh ~/github/launchpad-kindle/recor.sh
+cp /media/Kindle/SotongDJ/record.sh ~/github/launchpad-kindle/record.sh
 cp /media/Kindle/SotongDJ/system.py ~/github/launchpad-kindle/system.py
+cp /media/Kindle/SotongDJ/test.sh ~/github/launchpad-kindle/test.sh
+cp /media/Kindle/SotongDJ/try.py ~/github/launchpad-kindle/try.py
 cp /media/Kindle/SotongDJ/changelog.txt ~/github/launchpad-kindle/changelog
 cp /media/Kindle/launchpad/SotongDJ.ini ~/github/launchpad-kindle/launchpad/SotongDJ.ini
 cp /media/Kindle/mplayer/control.sh ~/github/launchpad-kindle/mplayer/control.sh
